Fix missing background of code blocks
Partial fix for #8

--- a/static/src/index.css
+++ b/static/src/index.css
@@ -235,7 +235,7 @@ h3 {
   max-width: 100%;
 }
 
-.article-content .codehilite pre code {
+.article-content .codehilite code {
   background-color: #272832;
   border-left: .2rem solid;
   border-radius: .2rem;
@@ -247,7 +247,7 @@ h3 {
   tab-size: 4;
 }
 
-.article-content :not(pre) > code {
+.article-content :not(.codehilite) > code {
   background-color: rgba(0, 0, 0, .1);
   border-radius: .2rem;
   padding: .2rem .5rem;
@@ -255,7 +255,7 @@ h3 {
 }
 
 @media (prefers-color-scheme: light) {
-  .article-content :not(pre) > code {
+  .article-content :not(.codehilite) > code {
     background-color: rgba(0, 0, 0, .05);
   }
 }
